# mini_assgn_4

./: README.md
imu_driver/src/: bno055_calibrate.cpp  bno055_node.cpp
mini_ros/: CMakeLists.txt  package.xml  setup.py
mini_ros/config/: controllers.yaml  walkingParam.yaml
mini_ros/include/: foot_planning.h  gait_planning.h  hardware_interface.h  mod.h  rtGetInf.h  rtGetNaN.h  rt_nonfinite.h  rtwtypes.h
mini_ros/launch/: control.launch  hw_bringup.launch  sensors.launch  sim_bringup.launch  walking.launch
mini_ros/scripts/: approx_zmp_multi_mass.py  approx_zmp_single_mass.py  ball_detection.py  camera.py  com.py  foot_position.py  measured_zmp.py  odom.py  robotis_mini.py
mini_ros/src/: foot_planning.cpp  gait_planning.cpp  hardware_interface.cpp  mini_hw_control.cpp  mod.cpp  rtGetInf.cpp  rtGetNaN.cpp  rt_nonfinite.cpp  zmp_walking.cpp
mini_ros_description/: CMakeLists.txt  package.xml
mini_ros_description/rviz/: robotis_mini.rviz
mini_ros_description/urdf/: common.urdf.xacro  robotis_mini.urdf.xacro  robotis_mini_upgrade.urdf
mini_ros_gazebo/: CMakeLists.txt  package.xml
mini_ros_gazebo/launch/: gazebo.launch
mini_ros_gazebo/worlds/: empty.world
src/mini_ros/config/: walkingParam.yaml
